--- a/public/search/_index.pl/index.html
+++ b/public/search/_index.pl/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   
 <title>Search</title>
 
@@ -15,9 +15,9 @@
   content="hugo, tailwind, tailwindcss, hugo theme, hugo theme tailwind"
 />
 <meta name="robots" content="noodp" />
-<meta property="og:url" content="http://localhost:1313/search/_index.pl/">
-  <meta property="og:site_name" content="Matthew Yorke">
-  <meta property="og:title" content="Matthew Yorke">
+<meta property="og:url" content="https://protonium.us/search/_index.pl/">
+  <meta property="og:site_name" content="Protonium">
+  <meta property="og:title" content="Protonium">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="search">
@@ -26,10 +26,10 @@
 <meta name="twitter:description" content="">
 
 
-<link rel="canonical" href="http://localhost:1313/search/_index.pl/" />
+<link rel="canonical" href="https://protonium.us/search/_index.pl/" />
 
 <link rel="shortcut icon" href="/favicon.ico" />
-<link rel="stylesheet" href="/css/index.4573e47dcfff49700db206601116cd2f48db1912c244b1d0b312713d4ca4a32e.css">
+<link rel="stylesheet" href="/css/index.min.5d96433bd17079764d5a8866addd6d7848ea8295977a06688f43c5be97af544e.css">
 
 
 
@@ -44,18 +44,7 @@
 
   <link rel="preload" href="/search/_index.pl/index.json" as="fetch" crossorigin="anonymous">
 </head>
-<body class="flex flex-col min-h-screen w-full bg-slate-50 dark:bg-gray-800">
-    
-<div class="fixed right-0 top-0 z-50 flex items-center justify-center bg-gray-200 p-2 text-sm uppercase text-black sm:bg-red-200 md:bg-yellow-200 lg:bg-green-200 xl:bg-blue-200 2xl:bg-pink-200">
-  <span class="block sm:hidden">all</span>
-  <span class="hidden sm:block md:hidden">sm</span>
-  <span class="hidden md:block lg:hidden">md</span>
-  <span class="hidden lg:block xl:hidden">lg</span>
-  <span class="hidden xl:block 2xl:hidden">xl</span>
-  <span class="hidden 2xl:block">2xl</span>
-</div>
-
-  <header class="flex flex-none justify-center z-10">
+<body class="flex flex-col min-h-screen w-full bg-slate-50 dark:bg-gray-800"><header class="flex flex-none justify-center z-10">
     <div class="flex flex-row gap justify-between w-full max-w-4xl lg:max-w-5xl h-12 mt-3">
   <div class="flex-none ml-2 md:ml-0">
     <a href="/" class="">
@@ -201,7 +190,7 @@
     minMatchCharLength:  2 ,
     threshold:  0.3 ,
   };
-</script><script src="/search.05daba52664889fa2ade18f8f9ad0d59d4902ed096aac71878d1b194401aa7b8.js"></script>
+</script><script src="/search.min.15909b76e23d8a4a8add89c47f801557cb63f16699eddb971918fb880d7066cf.js"></script>
 
 
   </main>
@@ -230,20 +219,14 @@
    <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
    <path d="M14 9.75a3.016 3.016 0 0 0 -4.163 .173a2.993 2.993 0 0 0 0 4.154a3.016 3.016 0 0 0 4.163 .173"></path>
 </svg>
-</i> 2023 - 2024 Matthew Yorke
+</i> 2024 Protonium
     
-  </div>
-  
-  <div class="flex flex-row">
-    <span class="ml-0 pl-0 md:ml-2 md:pl-2 border-l-0 md:border-l border-slate-300 dark:border-slate-400">
-      Powered by <a href="https://gohugo.io" target="_blank" rel="noopener" class="underline">Hugo</a> <span class="text-red-600">&hearts;</span> <a href="https://github.com/tomowang/hugo-theme-tailwind" target="_blank" rel="noopener" class="underline">Tailwind</a>
-    </span>
   </div>
   
 </section>
 
   </footer>
-  <script src="/main.js"></script>
+  <script src="/main.min.c6372b6836971865bd94bfde974748aca8415824a2facab6ccd66a87384bfacb.js"></script>
 
 
 
